--- a/04-elements-and-components/starter/index.html
+++ b/04-elements-and-components/starter/index.html
@@ -1,54 +1,117 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Chapter 4 Practice Exercises</title>
+        <script src="react.js"></script>
+        <script src="react-dom.js"></script>
+    </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <title>Chapter 4 Practice Exercises</title>
-  <script src="react.js"></script>
-  <script src="react-dom.js"></script>
-</head>
+    <body>
+        <div id="root"></div>
+        <script>
+            // Practice #1
+            // Create a variable called pEl
+            // Use createElement to create a paragraph element with text "Hello React."
+            const pEl = React.createElement("p", {}, "Hello React");
 
-<body>
-  <div id="root"></div>
-  <script>
+            // Practice #2
+            // Create a variable called h1LinkEl
+            // Use createElement to create an h1 element tag with a link inside of it
+            // Make the link point to https://reactjs.org/ and include the text "React"
+            const h1LinkEl = React.createElement(
+                "h1",
+                {},
+                React.createElement(
+                    "a",
+                    { href: "https://reactjs.org/" },
+                    "React"
+                )
+            );
 
-    // Practice #1
-    // Create a variable called pEl
-    // Use createElement to create a paragraph element with text "Hello React."
+            // const myFragment = React.createElement(
+            //     React.fragment,
+            //     {},
+            //     pEl,
+            //     h1LinkEl
+            // );
 
-    // Practice #2
-    // Create a variable called h1LinkEl
-    // Use createElement to create an h1 element tag with a link inside of it
-    // Make the link point to https://reactjs.org/ and include the text "React"
+            // Practice #3
+            // Create a component named "Header"
+            // Have it return a header with an ID of "main"
+            // Include h1El and pEl inside of the header element
 
-    // Practice #3
-    // Create a component named "Header"
-    // Have it return a header with an ID of "main" 
-    // Include h1El and pEl inside of the header element
+            const Header = () => {
+                return React.createElement(
+                    "header",
+                    { id: "main" },
+                    h1LinkEl,
+                    pEl,
+                    List()
+                );
+            };
 
+            // Practice #4
+            // Create a component named "List"
+            // Have it return an unordered list with a class of "react-links" and an ID of "top"
+            // Inside the list include 3 list items
+            // The first list item should be a link to the "React Docs" "https://reactjs.org/docs"
+            // The second list item should be a link to the "ReactDOM Docs" overview "https://reactjs.org/docs/react-dom.html"
+            // The third should be a link to a React related resource of your choice
 
-    // Practice #4
-    // Create a component named "List"
-    // Have it return an unordered list with a class of "react-links" and an ID of "top"
-    // Inside the list include 3 list items
-    // The first list item should be a link to the "React Docs" "https://reactjs.org/docs"
-    // The second list item should be a link to the "ReactDOM Docs" overview "https://reactjs.org/docs/react-dom.html"
-    // The third should be a link to a React related resource of your choice
+            function List() {
+                return React.createElement(
+                    "ul",
+                    { className: "react-links", id: "top" },
+                    React.createElement(
+                        "li",
+                        {},
+                        React.createElement(
+                            "a",
+                            { href: "https://reactjs.org/docs" },
+                            "React Docs"
+                        )
+                    ),
+                    React.createElement(
+                        "li",
+                        {},
+                        React.createElement(
+                            "a",
+                            { href: "https://reactjs.org/docs/react-dom.html" },
+                            "ReactDOM Docs"
+                        )
+                    ),
+                    React.createElement(
+                        "li",
+                        {},
+                        React.createElement(
+                            "a",
+                            {
+                                href: "https://netninja.dev/courses/build-websites-with-react-firebase",
+                            },
+                            "Net Ninja's Course on React and Firebase"
+                        )
+                    )
+                );
+            }
 
+            // Practice #5
+            // Create a component named "App"
+            // Have it return a Fragment with the Header and List components inside of it
+            function App() {
+                return React.createElement(
+                    React.Fragment,
+                    {},
+                    Header(),
+                    List()
+                );
+            }
 
-    // Practice #5
-    // Create a component named "App"
-    // Have it return a Fragment with the Header and List components inside of it
-
-
-
-    ReactDOM.render(
-      // Place your element variable or component function call here to test
-      '',
-      document.getElementById('root')
-    );
-
-  </script>
-</body>
-
+            ReactDOM.render(
+                // Place your element variable or component function call here to test
+                App(),
+                document.getElementById("root")
+            );
+        </script>
+    </body>
 </html>
